syntax = "proto3";

option go_package = "CRUD/proto";

package CRUD;

service CRUD {
  rpc Create(UserWriteReq) returns (DatabaseResp);
  rpc Read(UserReadReq) returns (DatabaseResp);
  rpc Update(UserWriteReq) returns (DatabaseResp);
  rpc Delete(UserReadReq) returns (DatabaseResp);
}

message UserWriteReq {
  string name = 1;
  optional int32 age = 2; 
}

message UserReadReq {
  string name = 1;
}

message DatabaseResp {
  bool success = 1;
  string message = 2;
  string errMessage = 3;
}